--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,8 @@ div.navbar-fixed nav {
 a#saveStatButton {
 	background-color: #B3C44B;
 }
+
+#statBatchPreviewModal {
+	width: 100%;
+	height: 100%;
+}
